2010-02-14  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el: Partially undo change of 2009-08-21.
	(ebuild-mode-arch-stable-list): Reintroduce variable.
	(ebuild-mode-modify-keywords, ebuild-mode-ekeyword-complete)
	(ebuild-mode-insert-skeleton): Use it.
	(ebuild-mode-arch-list): Don't test if arch.list is readable,
	because we ignore errors anyway. Sort list of architectures.
	(ebuild-mode-arch-lessp): New function, predicate for sort.
	(ebuild-mode-sort-keywords): Function removed.
	(ebuild-mode-modify-keywords): Pass ebuild-mode-arch-lessp as
	predicate function for sort.

2010-02-11  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
	python_get_implementation() and python_get_implementational_package()

2010-02-02  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	Add python_get_library(), python_get_version(),
	python_execute_nosetest(), python_execute_py.test(),
	python_execute_trial()

2010-01-17  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-linux-mod):
	Add linux-mod_pkg_setup_binary function
	(ebuild-mode-keywords-linux-info):
	Add get_makefile_extract_function function

2010-01-15  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-autotools):
	Add eautopoint function

2010-01-13  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-ruby-ng-gnome2):
	Add ruby-ng-gnome2.eclass

2010-01-11  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-base):
	Add base.eclass

2010-01-07  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-module):
	Add texlive-module.eclass

2009-12-30  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-run-command): Use file-relative-name,
	to make it work for ebuild files on remote systems.
