@@ -124,13 +124,12 @@ A formfeed is not considered whitespace by this function."
 
 (defvar ebuild-mode-use-flags
   (condition-case nil
-      (let ((file (concat ebuild-mode-portdir "/profiles/use.desc")))
-	(if (file-readable-p file)
-	    (with-temp-buffer
-	      (insert-file-contents-literally file)
-	      (while (re-search-forward "[ \t#].*$" nil t)
-		 (replace-match ""))
-	      (split-string (buffer-string)))))
+      (with-temp-buffer
+	(insert-file-contents-literally
+	 (concat ebuild-mode-portdir "/profiles/use.desc"))
+	(while (re-search-forward "[ \t#].*$" nil t)
+	  (replace-match ""))
+	(split-string (buffer-string)))
     (error nil))
   "List of USE flags.")
 
